--- a/telaConsultaUsuario.ui
+++ b/telaConsultaUsuario.ui
@@ -17,7 +17,7 @@
    <string notr="true">background-color: rgb(172, 172, 172);</string>
   </property>
   <widget class="QWidget" name="centralwidget">
-   <widget class="QPushButton" name="botaoCadastros">
+   <widget class="QPushButton" name="btConFuncionario">
     <property name="geometry">
      <rect>
       <x>30</x>
@@ -108,7 +108,7 @@ background-color: qlineargradient(spread:pad, x1:0, y1:0, x2:1, y2:0, stop:0 rgb
      <string>Voltar</string>
     </property>
    </widget>
-   <widget class="QPushButton" name="botaoCadastros_2">
+   <widget class="QPushButton" name="btConCliente">
     <property name="geometry">
      <rect>
       <x>350</x>
@@ -180,6 +180,40 @@ border-color: black;</string>
       <string>CPF do cliente</string>
      </property>
     </widget>
+    <widget class="QPushButton" name="btConsultarCliente">
+     <property name="geometry">
+      <rect>
+       <x>390</x>
+       <y>130</y>
+       <width>141</width>
+       <height>31</height>
+      </rect>
+     </property>
+     <property name="font">
+      <font>
+       <pointsize>12</pointsize>
+      </font>
+     </property>
+     <property name="styleSheet">
+      <string notr="true">QPushButton{
+background-color: qlineargradient(spread:pad, x1:0, y1:0, x2:1, y2:0, stop:0 rgba(255, 255, 255, 255), stop:1 rgba(165, 165, 165, 255));
+border-style: outset;
+border-width: 1px;
+border-color: black;
+border-radius: 5px;
+}
+
+QPushButton:hover{
+background-color: qlineargradient(spread:pad, x1:0, y1:0, x2:1, y2:0, stop:0 rgba(19, 226, 4, 255), stop:1 rgba(148, 209, 6, 255));
+}
+
+
+</string>
+     </property>
+     <property name="text">
+      <string>Consultar</string>
+     </property>
+    </widget>
    </widget>
    <widget class="QFrame" name="frameConFuncionario">
     <property name="geometry">
@@ -210,7 +244,11 @@ border-color: black;</string>
       </rect>
      </property>
      <property name="styleSheet">
-      <string notr="true">background-color: rgb(255, 255, 255);</string>
+      <string notr="true">background-color: rgb(255, 255, 255);
+border-radius: 5px;
+border-style: outset;
+border-width: 1px;
+border-color: black;</string>
      </property>
      <property name="placeholderText">
       <string>Matricula do Funcionário</string>
@@ -251,47 +289,12 @@ background-color: qlineargradient(spread:pad, x1:0, y1:0, x2:1, y2:0, stop:0 rgb
      </property>
     </widget>
    </widget>
-   <widget class="QPushButton" name="btConsultarCliente">
-    <property name="geometry">
-     <rect>
-      <x>410</x>
-      <y>230</y>
-      <width>141</width>
-      <height>31</height>
-     </rect>
-    </property>
-    <property name="font">
-     <font>
-      <pointsize>12</pointsize>
-     </font>
-    </property>
-    <property name="styleSheet">
-     <string notr="true">QPushButton{
-background-color: qlineargradient(spread:pad, x1:0, y1:0, x2:1, y2:0, stop:0 rgba(255, 255, 255, 255), stop:1 rgba(165, 165, 165, 255));
-border-style: outset;
-border-width: 1px;
-border-color: black;
-border-radius: 5px;
-}
-
-QPushButton:hover{
-background-color: qlineargradient(spread:pad, x1:0, y1:0, x2:1, y2:0, stop:0 rgba(19, 226, 4, 255), stop:1 rgba(148, 209, 6, 255));
-}
-
-
-</string>
-    </property>
-    <property name="text">
-     <string>Consultar</string>
-    </property>
-   </widget>
    <zorder>logoLoCarPequeno</zorder>
-   <zorder>botaoCadastros</zorder>
+   <zorder>btConFuncionario</zorder>
    <zorder>btVoltar</zorder>
-   <zorder>botaoCadastros_2</zorder>
-   <zorder>frameConCliente</zorder>
-   <zorder>btConsultarCliente</zorder>
+   <zorder>btConCliente</zorder>
    <zorder>frameConFuncionario</zorder>
+   <zorder>frameConCliente</zorder>
   </widget>
   <widget class="QMenuBar" name="menubar">
    <property name="geometry">
