--- a/telas/telaConsultaUsuario.ui
+++ b/telas/telaConsultaUsuario.ui
@@ -649,6 +649,44 @@ background-color: qlineargradient(spread:pad, x1:0, y1:0, x2:1, y2:0, stop:0 rgb
       <string/>
      </property>
     </widget>
+    <widget class="QPushButton" name="btExcluir">
+     <property name="geometry">
+      <rect>
+       <x>510</x>
+       <y>250</y>
+       <width>91</width>
+       <height>31</height>
+      </rect>
+     </property>
+     <property name="font">
+      <font>
+       <family>Dubai</family>
+       <pointsize>16</pointsize>
+      </font>
+     </property>
+     <property name="cursor">
+      <cursorShape>PointingHandCursor</cursorShape>
+     </property>
+     <property name="styleSheet">
+      <string notr="true">QPushButton{	
+background-color: qlineargradient(spread:pad, x1:0, y1:0, x2:1, y2:0, stop:0 rgba(255, 255, 255, 255), stop:1 rgba(165, 165, 165, 255));
+border-radius: 5px;
+border-style: outset;
+border-width: 1px;
+border-color: black;
+
+}
+
+QPushButton:hover{
+background-color: qlineargradient(spread:pad, x1:0, y1:0, x2:1, y2:1, stop:0 rgba(255, 0, 8, 255), stop:1 rgba(255, 0, 119, 255))
+}
+
+</string>
+     </property>
+     <property name="text">
+      <string>Excluir</string>
+     </property>
+    </widget>
    </widget>
    <zorder>logoLoCarPequeno</zorder>
    <zorder>btConFuncionario</zorder>
